--- a/limitless_intelligence.html
+++ b/limitless_intelligence.html
@@ -62,6 +62,7 @@
 								<div class="hb-content">
 									<a class="logo logo-header" href="https://limitlessmountains.com">
 										<img src="images_2/limitlessmountains.png" alt="Limitless Mountains">
+										<link rel="icon" href="https://limitlessmountains.com">
 									</a><!-- .logo end -->
 									<div class="hb-meta">
 									</div><!-- .hb-meta end -->
