--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="author" content="">
 
   <title>We Are Limitless</title>
+  <link rel="icon" href="https://limitlessmountains.com">
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
