--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">Experiences</a>
+            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/#projects">Experiences</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/limitless_intelligence.html">Limitless Intelligence</a>
@@ -301,6 +301,8 @@
     <div class="container">
       Copyright &copy; Limitless 2019
     </div>
+    <a style="color:white" href="https://www.limitlessmountains.com/Limitless_Mountains_Privacy_Policy.html">Privacy Policy</a>
+
   </footer>
 
   <!-- Bootstrap core JavaScript -->
