--- a/limitless_intelligence.html
+++ b/limitless_intelligence.html
@@ -100,7 +100,7 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">LIMITLESS INTELLIGENCE</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">CULTURAL DUE DILLIGENCE & DEVELOPEMENT</h2>
+        <h2 class="text-white-50 mx-auto mt-2 mb-5">Cultural Dee Dilligence & Development</h2>
         <a href="#about" class="btn btn-primary js-scroll-trigger">Learn More</a>
       </div>
     </div>
