--- a/limitless_intelligence.html
+++ b/limitless_intelligence.html
@@ -147,7 +147,7 @@
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/teamwork.png" alt="">
+          <img class="img-fluid" src="img/partnerships.png" alt="">
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
@@ -167,7 +167,7 @@
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-02.png" alt="">
+          <img class="img-fluid" src="img/risks.png" alt="">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
@@ -185,7 +185,7 @@
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-01.png" alt="">
+          <img class="img-fluid" src="img/organisational_development.png" alt="">
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
