updated page titles
title descriptions

--- a/limitless_intelligence.html
+++ b/limitless_intelligence.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>LIMITLESS INTELLIGENCE</title>
+  <title>Limitless Inteligence - Team Culture Development</title>
   <link rel="icon" href="https://limitlessmountains.com">
 
   <!-- Bootstrap core CSS -->
@@ -199,9 +199,6 @@
           </div>
         </div>
       </div>
-
-
-
 
       <!-- Featured Project Row -->
       <!-- <div class="row align-items-center no-gutters mb-4 mb-lg-5">
