--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>We Are Limitless</title>
+  <title>Limitless Mountains - We Are Limitless</title>
   <link rel="icon" href="https://limitlessmountains.com">
 
   <!-- Bootstrap core CSS -->
