updated all favicon icons
updated url link

--- a/Limitless_Mountains_Privacy_Policy.html
+++ b/Limitless_Mountains_Privacy_Policy.html
@@ -8,8 +8,8 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>We Are Limitless</title>
-  <link rel="icon" href="https://limitlessmountains.com">
+  <title>Limitless Mountains/Intelligence - Privacy Policy</title>
+  <link rel="icon" href="https://limitlessmountains.com/favicon.ico">
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
