--- a/limitless_intelligence.html
+++ b/limitless_intelligence.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
 
   <title>Limitless Inteligence - Team Culture Development</title>
-  <link rel="icon" href="https://limitlessmountains.com">
+  <link rel="icon" href="https://limitlessmountains.com/favicon.ico">
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
