--- a/X4_test_report_3.html
+++ b/X4_test_report_3.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="form.css" rel="stylesheet">
 
     <title>Limitless Mountains</title>
+    <link rel="icon" href="https://limitlessmountains.com/favicon.ico">
+
   </head>
   <body>
     <div class="jumbotron jumbotron-fluid">
