--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
 
   <title>Limitless Mountains - We Are Limitless</title>
-  <link rel="icon" href="https://limitlessmountains.com">
+  <link rel="icon" href="https://limitlessmountains.com/favicon.ico">
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
