--- a/index.html
+++ b/index.html
@@ -57,19 +57,26 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">LIMITLESS</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler navbar-toggler-center" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml-right">
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/#projects">Experiences</a>
+            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/#projects">Limitless Experiences</a>
           </li>
+        </ul>
+      </div>
+
+        <img src="images_2/limitlessmountains_red.png" href="#page-top"></img>
+
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/limitless_intelligence.html">Limitless Intelligence</a>
           </li>
@@ -86,7 +93,7 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">Limitless</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">We believe in challenging and developing the individuals and organisations that are shaping the world</h2>
+        <h2 class="text-white mx-auto mt-2 mb-5">We believe in challenging and developing the individuals and organisations that are shaping the world</h2>
         <a href="#about" class="btn btn-primary js-scroll-trigger">Learn More</a>
       </div>
     </div>
@@ -112,40 +119,9 @@
     </div>
   </section>
 
+  <!-- Section -->
+  <section>
 
-<!-- ////full width image -->
-
-
-<!-- ////slider -->
-<!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="img/AdobeStock_83473788.png" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/AdobeStock_83473788.png" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/AdobeStock_83473788.png" class="d-block w-100" alt="...">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div> -->
-
-
-<!-- ///////// -->
 
 
   <!-- Projects Section -->
@@ -156,7 +132,7 @@
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/teamwork.png" alt="">
+          <img class="img-fluid" src="img/team.jpg" alt="">
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
@@ -174,7 +150,7 @@
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-02.png" alt="">
+          <img class="img-fluid" src="img/data_driven.jpg" alt="">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
@@ -192,7 +168,7 @@
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-01.png" alt="">
+          <img class="img-fluid" src="img/fast.jpg" alt="">
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
@@ -250,7 +226,7 @@
   </section>
 
   <!-- Contact Section -->
-  <section id="contact" class="contact-section bg-black">
+  <section class="contact-section bg-black">
     <div class="container">
 
       <div class="row">
