new designed site
including all files to test

--- a/Limitless_Mountains_Privacy_Policy.html
+++ b/Limitless_Mountains_Privacy_Policy.html
@@ -21,6 +21,8 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <link href="css_2/style.css" rel="stylesheet">
+  <link href="css/grayscale.min.css" rel="stylesheet">
+
 
 
 
@@ -67,26 +69,34 @@
 
 </head>
 
+
 <body id="page-top">
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="https://www.limitlessmountains.com/">LIMITLESS</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler navbar-toggler-center" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml-right">
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/#projects">Experiences</a>
+            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/#about">Experiences</a>
           </li>
+        </ul>
+      </div>
+
+        <img src="images_2/limitlessmountains_red.png" href="#page-top"></img>
+
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/limitless_intelligence.html">Limitless Intelligence</a>
+            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/intelligence.html">Intelligence</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/contact.html">Contact</a>
@@ -96,36 +106,26 @@
     </div>
   </nav>
 
-  <!-- Header -->
-  <header class="masthead">
-    <div class="container d-flex h-100 align-items-center">
-      <div class="mx-auto text-center">
-        <h1 class="mx-auto my-0 text-uppercase">LIMITLESS MOUNTAINS</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">Limitless Mountains and Limitless AI Privacy Notice</h2>
-        <a href="#about" class="btn btn-primary js-scroll-trigger">Learn More</a>
-      </div>
-    </div>
-  </header>
 
   <!-- About Section -->
-  <section id="about" class="about-section text-center">
+
+  <section id="contact-limitlessmountains" class="about-section_two text-center">
 
     <div class="container">
 
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
 
-          <h2 class="text-white mb-4">WE'LL DELIVER AN EXPERIENCE THAT YOU’LL NEVER FORGET</h2>
+<br>
+<div class="container">
+  <center>
+<h3>Limitless Mountains and Limitless AI Privacy Notice</h3>
+
+</center>
+</div>
 
 
-        </div>
+</div>
 
-      </div>
-      <!-- <img src="img/graphic_black_mountains.png" class="img-fluid" alt=""> -->
-
-    </div>
-  </section>
-
+</section>
 
 <!-- ////full width image -->
 
@@ -513,7 +513,7 @@ information you provided to us in its original form from our servers.</p>
   </section>
 
   <!-- Contact Section -->
-  <section id="contact" class="contact-section bg-black">
+  <section id="contact" class="contact-section bg-dark">
     <div class="container">
 
       <div class="row">
@@ -560,11 +560,15 @@ information you provided to us in its original form from our servers.</p>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-black small text-center text-white-50">
+  <footer class="bg-dark small text-center text-white-50">
     <div class="container">
       Copyright &copy; Limitless 2019
     </div>
     <a style="color:white" href="https://www.limitlessmountains.com/Limitless_Mountains_Privacy_Policy.html">Privacy Policy</a>
+
+    <br><br>
+    <img src="img/mountain-training-logo.png" padding="5px" width="75px" alt="Limitless Mountaints - Mountain Training">
+    <img src="img/mountain_training_assosiation.png"  padding="5px" width="75px" alt="Limitless Mountaints - Mountain Training Assosiation">
 
   </footer>
 
