--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Limitless Mountains/Intelegence - Contact Us</title>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" />
-  <link rel="stylesheet" href="style.css">
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Limitless Mountains - About</title>
   <link rel="icon" href="https://limitlessmountains.com/favicon.ico">
 
-
-
-
+  <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
@@ -22,57 +21,64 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 
-
+  <!-- Custom styles for this template -->
+  <link href="css/grayscale.min.css" rel="stylesheet">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154525719-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154525719-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'UA-154525719-1');
-</script>
-<!-- Facebook Pixel Code -->
-<script>
-  !function(f,b,e,v,n,t,s)
-  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-  n.queue=[];t=b.createElement(e);t.async=!0;
-  t.src=v;s=b.getElementsByTagName(e)[0];
-  s.parentNode.insertBefore(t,s)}(window, document,'script',
-  'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '719509894885605');
-  fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=719509894885605&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Facebook Pixel Code -->
+    gtag('config', 'UA-154525719-1');
+  </script>
+  <!-- Facebook Pixel Code -->
+  <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '719509894885605');
+    fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=719509894885605&ev=PageView&noscript=1"
+  /></noscript>
+  <!-- End Facebook Pixel Code -->
 </head>
-
 
 <body id="page-top">
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="https://www.limitlessmountains.com/">LIMITLESS</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler navbar-toggler-center" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml-right">
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/#projects">Experiences</a>
+            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/#about">Experiences</a>
           </li>
+        </ul>
+      </div>
+
+        <img src="images_2/limitlessmountains_red.png" href="#page-top"></img>
+
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/limitless_intelligence.html">Limitless Intelligence</a>
+            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/intelligence.html">Intelligence</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/contact.html">Contact</a>
@@ -83,61 +89,191 @@
   </nav>
 
 
+  <!-- About Section -->
+
+  <section id="contact-limitlessmountains" class="about-section_two text-center">
+
+    <div class="container">
 
 
+<br>
+<div class="container">
+  <center>
+<h3>Would you like to find out more?</h3>
+<p>We like to speak to our customers! Please fill out our contact form below and a member of the team will contact you.</p>
+
+</center>
+</div>
 
 
+</div>
 
-<body>
-  <div class="container">
-    <a class="logo logo-header" href="https://limitlessmountains.com">
-      <img src="images_2/limitlessmountains.png" alt="Limitless Mountains">
-    </a>
-    <!-- <h1 class="brand"><span>LIMITLESS</span> MOUNTAINS</h1> -->
-    <div class="wrapper">
-      <div class="company-info">
-        <h3>Contact us to learn more about our products and services.</h3>
-        <ul>
-          <li><i class="fa fa-road"></i> 4 Granary House, Micheldever Stations, Winchester, SO213FD</li>
-          <li><i class="fa fa-phone"></i> (+44)077387-37884</li>
-          <li><i class="fa fa-envelope"></i> team@limitlessmountains.com</li>
-        </ul>
-      </div>
+</section>
+
+
+<section class="container" >
+  <div class="row p-3 mb-6 bg-white  rounded">
+    <div class="container">
+      <div class="wrapper">
+
       <div class="contact">
-        <h3>Submit your information below to contact us via our webform.</h3>
-        <div class="alert">Your message has been sent</div>
-        <form id="contactForm">
-          <p>
-            <label>Name</label>
-            <input type="text" name="name" id="name" required>
-          </p>
-          <p>
-            <label>Company</label>
-            <input type="text" name="company" id="company">
-          </p>
-          <p>
-            <label>Email Address</label>
-            <input type="email" name="email" id="email" required>
-          </p>
-          <p>
-            <label>Phone Number</label>
-            <input type="text" name="phone" id="phone">
-          </p>
-          <p class="full">
-            <label>Message</label>
-            <textarea name="message" rows="5" id="message"></textarea>
-          </p>
-          <p class="full">
-            <button type="submit">Submit</button>
-          </p>
-        </form>
-      </div>
+      <form id="contactForm">
+
+        <div class="alert"></div>
+
+    <div class="form-row">
+    <div class="col-md-6 mb-3">
+    <label>First Name</label>
+    <input type="text" class="form-control" id="name" placeholder="Full Name" value="" required>
+    <div class="valid-feedback">
+    </div>
+    </div>
+    <div class="col-md-6 mb-3">
+    <label>Last name</label>
+    <input type="text" class="form-control" id="company" placeholder="Company Name" value="" required>
+    <div class="valid-feedback">
+    </div>
     </div>
   </div>
 
-  <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
-  <script src="main.js"></script>
-  <script type="text/javascript">
+    <div class="form-row">
+
+    <div class="col-md-6 mb-3">
+    <label>Your Email</label>
+    <input type="email" class="form-control" id="email" placeholder="email" value="" required>
+    <div class="valid-feedback">
+    </div>
+    </div>
+
+      <div class="col-md-6 mb-3">
+      <label>Phone Number</label>
+      <input type="phone" class="form-control" id="phone" placeholder="phone" value="" required>
+      <div class="valid-feedback">
+      </div>
+      </div>
+      </div>
+      <div class="form-row">
+
+        <div class="col-md-12 mb-12">
+        <label>Phone Number</label>
+        <input type="textarea" class="form-control" id="message" placeholder="Message" value="" required>
+        <div class="valid-feedback">
+        </div>
+        </div>
+      </div>
+
+<br>
+<p class="full">
+
+    <button class="btn btn-primary btn-lg btn-block" onclick="location.href = 'https://www.limitlessmountains.com/thankyou';" type="submit">Submit form</button>
+
+</p>
+
+    </form>
+</div>
+</div>
+</div>
+
+
+    <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
+    <script src="main.js"></script>
+
+
+    </div>
+
+</section>
+
+
+</div>
+</section>
+
+
+
+  <!-- Contact Section -->
+  <section class="contact-section bg-dark">
+    <div class="container">
+
+      <div class="row">
+
+        <div class="col-md-4 mb-3 mb-md-0">
+          <div class="card py-4 h-100">
+            <div class="card-body text-center">
+              <i class="fas fa-map-marked-alt text-primary mb-2"></i>
+              <h4 class="text-uppercase m-0">Address</h4>
+              <hr class="my-4">
+              <div class="small text-black-50">Limitless Mountains, 4 Granary House, Winchester SO213FD</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 mb-3 mb-md-0">
+          <div class="card py-4 h-100">
+            <div class="card-body text-center">
+              <i class="fas fa-envelope text-primary mb-2"></i>
+              <h4 class="text-uppercase m-0">Email</h4>
+              <hr class="my-4">
+              <div class="small text-black-50">
+                <a href="#">team@limitless.com</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 mb-3 mb-md-0">
+          <div class="card py-4 h-100">
+            <div class="card-body text-center">
+              <i class="fas fa-mobile-alt text-primary mb-2"></i>
+              <h4 class="text-uppercase m-0">Phone</h4>
+              <hr class="my-4">
+              <div class="small text-black-50">+44 7738 737884</div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-dark small text-center text-white-50">
+    <div class="container">
+      Copyright &copy; Limitless 2019
+    </div>
+    <a style="color:white" href="https://www.limitlessmountains.com/Limitless_Mountains_Privacy_Policy.html">Privacy Policy</a>
+
+    <br><br>
+    <img src="img/mountain-training-logo.png" padding="5px" width="75px" alt="Limitless Mountaints - Mountain Training">
+    <img src="img/mountain_training_assosiation.png"  padding="5px" width="75px" alt="Limitless Mountaints - Mountain Training Assosiation">
+
+
+  </footer>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Custom scripts for this template -->
+  <script src="js/grayscale.min.js"></script>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+
+
+
+
+
+
+
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script type="text/javascript">
 _linkedin_partner_id = "1885100";
 window._linkedin_data_partner_ids = window._linkedin_data_partner_ids || [];
 window._linkedin_data_partner_ids.push(_linkedin_partner_id);
@@ -151,5 +287,8 @@ s.parentNode.insertBefore(b, s);})();
 <noscript>
 <img height="1" width="1" style="display:none;" alt="" src="https://px.ads.linkedin.com/collect/?pid=1885100&fmt=gif" />
 </noscript>
+
 </body>
+
+
 </html>
