--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/#projects">Limitless Experiences</a>
+            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/#about">Experiences</a>
           </li>
         </ul>
       </div>
@@ -78,7 +78,7 @@
 
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/limitless_intelligence.html">Limitless Intelligence</a>
+            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/intelligence.html">Intelligence</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/contact.html">Contact</a>
@@ -93,14 +93,14 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">Limitless</h1>
-        <h2 class="text-white mx-auto mt-2 mb-5">We believe in challenging and developing the individuals and organisations that are shaping the world</h2>
-        <a href="#about" class="btn btn-primary js-scroll-trigger">Learn More</a>
+          <h3 class="text-white mx-auto mt-2 mb-5">MOUNTAIN EXPERIENCES</h3>
+        <a href="#learn-more" type="button" class="btn btn-outline-danger btn-lg js-scroll-trigger">Learn More</a>
       </div>
     </div>
   </header>
 
   <!-- About Section -->
-  <section id="about" class="about-section text-center">
+  <!-- <section id="about" class="about-section text-center">
 
     <div class="container">
 
@@ -116,117 +116,112 @@
       </div>
       <!-- <img src="img/graphic_black_mountains.png" class="img-fluid" alt=""> -->
 
-    </div>
-  </section>
+    <!-- </div> -->
+  <!-- </section> -->
 
-  <!-- Section -->
+
+
+
+
+<!-- three images wide -->
+
+
+  <div id="learn-more" class="container">
+    <br>
+
+    <section>
+      <div class="card-deck">
+        <div class="card">
+          <div class="container_two">
+          <img src="img/about_us.png" class="card-img-top" alt="Simon Weatherall - Limitless">
+          <!-- <button class="btn ">About Us</button> -->
+          <a href="https://www.limitlessmountains.com/#about" type="button" class="btn btn-outline-danger btn-lg js-scroll-trigger">About Us</a>
+
+        </div>
+          <div class="card-body">
+            <h5 class="card-title">About Us</h5>
+            <p class="card-text">Former UK Special Forces and Royal Marine Commandos</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="container_two">
+          <img src="img/experiences.png" class="card-img-top" alt="Simon Weatherall - Limitless">
+          <a href="https://www.limitlessmountains.com/#about" type="button" class="btn btn-outline-danger btn-lg js-scroll-trigger">Experiences</a>
+
+        </div>
+          <div class="card-body">
+            <h5 class="card-title">Experiences</h5>
+            <p class="card-text">Learn about how we can help your team grow.</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="container_two">
+          <img src="img/contact_us.png" class="card-img-top" alt="Simon Weatherall - Limitless">
+          <a href="https://www.limitlessmountains.com/#contact" type="button" class="btn btn-outline-danger btn-lg js-scroll-trigger">Contact</a>
+        </div>
+          <div class="card-body">
+            <h5 class="card-title">Contact Us</h5>
+            <p class="card-text">Fill out our webform so we can provide you more information</p>
+          </div>
+        </div>
+
+      </div>
+      <br>
+    </section>
+
+
+  </div>
+
+<!-- two images wide -->
+
+<div class="container">
+  <br>
+
   <section>
-
-
-
-  <!-- Projects Section -->
-  <section id="projects" class="projects-section bg-light">
-    <div class="container">
-
-
-      <!-- Project One Row -->
-      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-        <div class="col-lg-6">
-          <img class="img-fluid" src="img/team.jpg" alt="">
-        </div>
-        <div class="col-lg-6">
-          <div class="bg-black text-center h-100 project">
-            <div class="d-flex h-100">
-              <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Accelerated Team Growth</h4>
-                <p class="mb-0 text-white-50">A thriving organisation depends on a thriving team. Your challenge is to develop your people at a rate which matches your organisational growth objectives. We provide a limitless solution to help you achieve this.</p>
-                <hr class="d-none d-lg-block mb-0 ml-0">
-              </div>
-            </div>
-          </div>
+    <div class="card-deck">
+      <div class="card">
+        <div class="container_two">
+        <img src="img/mountain_data_science.png" class="card-img-top" alt="Simon Weatherall - Limitless">
+        <a href="https://www.limitlessmountains.com/#intelligence" type="button" class="btn btn-outline-danger btn-lg js-scroll-trigger">Intelligence</a>
+      </div>
+        <div class="card-body">
+          <h5 class="card-title">Intelligence</h5>
+          <p class="card-text">How we use data science and ai to statisitcally grow your culture.</p>
         </div>
       </div>
-
-      <!-- Project Two Row -->
-      <div class="row justify-content-center no-gutters">
-        <div class="col-lg-6">
-          <img class="img-fluid" src="img/data_driven.jpg" alt="">
-        </div>
-        <div class="col-lg-6 order-lg-first">
-          <div class="bg-black text-center h-100 project">
-            <div class="d-flex h-100">
-              <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Data Driven Success To Deliver Clear Return On Investment</h4>
-                <p class="mb-0 text-white-50">A group of people does not equal a team. Our unique model combines data science and practical psychology to understand your organisation's dynamic and develop a tailored package that will deliver clear, statistical feedback and strengthen your culture.</p>
-                <hr class="d-none d-lg-block mb-0 mr-0">
-              </div>
-            </div>
-          </div>
+      <div class="card">
+        <div class="container_two">
+        <img src="img/adventures.png" class="card-img-top" alt="Simon Weatherall - Limitless">
+        <a href="https://www.limitlessmountains.com/#about" type="button" class="btn btn-outline-danger btn-lg js-scroll-trigger">Adventures</a>
+      </div>
+        <div class="card-body">
+          <h5 class="card-title">Adventures</h5>
+          <p class="card-text">How we create custom experiences to motivate your team.</p>
         </div>
       </div>
-
-      <!-- Project One Row -->
-      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-        <div class="col-lg-6">
-          <img class="img-fluid" src="img/fast.jpg" alt="">
-        </div>
-        <div class="col-lg-6">
-          <div class="bg-black text-center h-100 project">
-            <div class="d-flex h-100">
-              <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">About Our Clients</h4>
-                <p class="mb-0 text-white-50">“Fast moving, highly motivated individuals who are focused on achieving goals, increasing knowledge and changing the world.“ <br> Does this describe the people you want in your organisation? Yes? Then Limitless experiences are for you.</p>
-                <hr class="d-none d-lg-block mb-0 ml-0">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-
-
-      <!-- Featured Project Row -->
-      <!-- <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-        <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/teamwork.jpg" alt="">
-        </div>
-        <div class="col-xl-4 col-lg-5">
-          <div class="featured-text text-center text-lg-left">
-            <h4>Accelorated Team Growth</h4>
-            <p class="text-black-50 mb-0">Your challenge is to grow your team at a rate which matches your organisational growth objectives. We provide a limitless solution to help you achieve this.</p>
-          </div>
-        </div>
-      </div> -->
-
 
 
 
     </div>
+    <br>
   </section>
 
-  <!-- Signup Section -->
-  <section id="signup" class="signup-section">
-    <!-- <div class="container">
-      <div class="row">
-        <div class="col-md-10 col-lg-8 mx-auto text-center"> -->
 
-          <!-- <i class="far fa-paper-plane fa-2x mb-2 text-white"></i> -->
-          <!-- <h2 class="text-white mb-5">Recieve further information</h2>
+</div>
 
-          <form class="form-inline d-flex">
-            <input type="name" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="text" placeholder="Your name...">
-            <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Email address...">
-            <button type="submit" class="btn btn-primary mx-auto">Submit</button>
-          </form> -->
 
-        <!-- </div>
-      </div>
-    </div> -->
-  </section>
+
+
+
+
+
+
+
+
 
   <!-- Contact Section -->
-  <section class="contact-section bg-black">
+  <section class="contact-section bg-dark">
     <div class="container">
 
       <div class="row">
@@ -273,11 +268,17 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-black small text-center text-white-50">
+  <footer class="bg-dark small text-center text-white-50">
     <div class="container">
       Copyright &copy; Limitless 2019
     </div>
     <a style="color:white" href="https://www.limitlessmountains.com/Limitless_Mountains_Privacy_Policy.html">Privacy Policy</a>
+
+    <br><br>
+    <img src="img/mountain-training-logo.png" padding="5px" width="75px" alt="Limitless Mountaints - Mountain Training">
+    <img src="img/mountain_training_assosiation.png"  padding="5px" width="75px" alt="Limitless Mountaints - Mountain Training Assosiation">
+
+
 
   </footer>
 
