--- a/intelligence.html
+++ b/intelligence.html
@@ -22,7 +22,7 @@
 
 
   <!-- Custom styles for this template -->
-  <link href="css/grayscale.min.css" rel="stylesheet">
+  <link href="/css/grayscale.min.css" rel="stylesheet">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154525719-1"></script>
@@ -108,6 +108,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
 <div class="about-text-page">
+  <br>
           <h2 class="text-black e mb-4">DATA DRIVEN CULTURAL DUE DILLIGENCE & DEVELOPMENT!</h2>
           <p class="text-black-50">Investors and shareholders require organisations to evidence cultural performance. We measure cultural risk, gain quantifiable team insights and rapidly develop individuals and teams who are shaping the world.</p><br>
 </div>
