--- a/Limitless_Mountains_Privacy_Policy.html
+++ b/Limitless_Mountains_Privacy_Policy.html
@@ -20,8 +20,8 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-  <link href="css_2/style.css" rel="stylesheet">
-  <link href="css/grayscale.min.css" rel="stylesheet">
+  <link href="/css_2/style.css" rel="stylesheet">
+  <link href="/css/grayscale.min.css" rel="stylesheet">
 
 
 
