--- a/contact.html
+++ b/contact.html
@@ -165,7 +165,7 @@
 <br>
 <p class="full">
 
-    <button class="btn btn-primary btn-lg btn-block" onclick="location.href = 'https://www.limitlessmountains.com/thankyou';" type="submit">Submit form</button>
+    <button class="btn btn-primary btn-lg btn-block" onclick="location.href = 'https://www.limitlessmountains.com';" type="submit">Submit form</button>
 
 </p>
 
